# swagger.json
@@ -586,6 +586,77 @@
         ]
       }
     },
+    "/game/rating": {
+      "post": {
+        "tags": [
+          "Quest"
+        ],
+        "summary": "Add rating to game",
+        "description": "Add rating and comment to game",
+        "operationId": "addRatingToGame",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "rating",
+            "in": "body",
+            "description": "rating data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "format": "int64"
+                },
+                "text": {
+                  "type": "string",
+                  "example": "Крутой квест"
+                },
+                "weight": {
+                  "type": "integer",
+                  "format": "int64"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userid": {
+                  "type": "integer",
+                  "format": "int64"
+                },
+                "text": {
+                  "type": "string",
+                  "example": "Крутой квест"
+                },
+                "weight": {
+                  "type": "integer",
+                  "format": "int64"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Games not found"
+          }
+        },
+        "security": [
+          {
+            "auth_env": []
+          }
+        ]
+      }
+    },
     "/scenario": {
       "put": {
         "tags": [
@@ -1189,7 +1260,7 @@
         ]
       }
     },
-    "statistic/update": {
+    "/statistic/update": {
       "post": {
         "tags": [
           "User"
@@ -1246,7 +1317,7 @@
         ]
       }
     },
-    "statistic/drop": {
+    "/statistic/drop": {
       "post": {
         "tags": [
           "User"
